@@ -33,3 +33,11 @@ sapply <- function(X, FUN, ..., simplify = TRUE, USE.NAMES = TRUE)
     } else answer
 }
 
+vapply <- function(X, FUN, FUN.VALUE, ...,  USE.NAMES = TRUE)
+{
+    FUN <- match.fun(FUN)
+    if(!is.vector(X) || is.object(X)) X <- as.list(X)
+    .Internal(vapply(X, FUN, FUN.VALUE, USE.NAMES))
+}
+
+
