@@ -705,6 +705,7 @@ attribute_hidden FUNTAB R_FunTab[] = {
     {"eapply", do_eapply, 0, 10, 4, {PP_FUNCALL, PREC_FN, 0}},
     {"lapply", do_lapply, 0, 10, 2, {PP_FUNCALL, PREC_FN, 0}},
     {"rapply", do_rapply, 0, 11, 5, {PP_FUNCALL, PREC_FN, 0}},
+    {"vapply", do_vapply, 0, 10, 4, {PP_FUNCALL, PREC_FN, 0}},
     {"islistfactor", do_islistfactor, 0, 11, 2, {PP_FUNCALL, PREC_FN, 0}},
     {"colSums", do_colsum, 0, 11, 4, {PP_FUNCALL, PREC_FN, 0}},
     {"colMeans", do_colsum, 1, 11, 4, {PP_FUNCALL, PREC_FN, 0}},
